[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dptb_agent"
dynamic = ["version"]
description = "Dptb agent"
requires-python = ">=3.11"

[project.scripts]
dptb-agent = "dptb_agent.main:main"

[tool.setuptools]
package-dir = { "dptb_agent" = "dptb_agent" }

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = [""]
include = ["dptb_agent*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
pythonpath = [""]
testpaths = ["tests"] 
addopts = "-v"        

[project.optional-dependencies]
dev = ["mcp>=1.9.0",
       "science-agent-sdk"
]
