[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dptb_agent_tools"
dynamic = ["version"]
description = "Dptb agent tools for mcp"
requires-python = ">=3.11"
dependencies = [
    "bohr-agent-sdk",
    "mcp>=1.9.0"
]

[project.scripts]
dtat = "dptb_agent_tools.main:main"

[tool.setuptools]
package-dir = { "dptb_agent_tools" = "dptb_agent_tools" }

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = [""]
include = ["dptb_agent_tools*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.pytest.ini_options]
pythonpath = [""]
testpaths = ["tests"]
addopts = "-v"

[project.optional-dependencies]
dev = ["LiteLlm",
       "google-adk"
]
